--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=HubDb.db",
+    "PostgresConnection": "Host=localhost;Database=HubDb;Username=User;Password=Password"
+  },
   "AllowedHosts": "*"
 }
