add-ef-context: добавил area Account и пакеты Swagger

--- a/KartowkaMarkowkaHub.Web/KartowkaMarkowkaHub.Web.csproj
+++ b/KartowkaMarkowkaHub.Web/KartowkaMarkowkaHub.Web.csproj
@@ -10,10 +10,19 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.7.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\KartowkaMarkowkaHub.Services\KartowkaMarkowkaHub.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Account\Data\" />
+    <Folder Include="Areas\Account\Models\" />
+    <Folder Include="Areas\Account\Views\" />
   </ItemGroup>
 
 </Project>
