add-swagger: Добавляет и настраивает swagger, а также Areas

--- a/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
+++ b/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\KartowkaMarkowkaHub.Data\KartowkaMarkowkaHub.Data.csproj" />
+    <ProjectReference Include="..\KartowkaMarkowkaHub.DTO\KartowkaMarkowkaHub.DTO.csproj" />
   </ItemGroup>
 
 </Project>
