kuzmin/auth: добавление MW авторизации

--- a/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
+++ b/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\KartowkaMarkowkaHub.Data\KartowkaMarkowkaHub.Data.csproj" />
     <ProjectReference Include="..\KartowkaMarkowkaHub.DTO\KartowkaMarkowkaHub.DTO.csproj" />
+    <ProjectReference Include="..\KartowkaMarkowkaHub.Services.Identity\KartowkaMarkowkaHub.Services.Identity.csproj" />
   </ItemGroup>
 
 </Project>
