--- a/KartowkaMarkowkaHub.DTO/KartowkaMarkowkaHub.DTO.csproj
+++ b/KartowkaMarkowkaHub.DTO/KartowkaMarkowkaHub.DTO.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Account\Validators\" />
+  </ItemGroup>
+
 </Project>
