--- a/KartowkaMarkowkaHub.Services.Identity/KartowkaMarkowkaHub.Services.Identity.csproj
+++ b/KartowkaMarkowkaHub.Services.Identity/KartowkaMarkowkaHub.Services.Identity.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\KartowkaMarkowkaHub.Data\KartowkaMarkowkaHub.Data.csproj" />
+  </ItemGroup>
+
 </Project>
