--- a/KartowkaMarkowkaHub.Data/KartowkaMarkowkaHub.Data.csproj
+++ b/KartowkaMarkowkaHub.Data/KartowkaMarkowkaHub.Data.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.7" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.4" />
   </ItemGroup>
 
   <ItemGroup>
