--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -7,7 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=HubDb.db",
-    "PostgresConnection": "Host=postgresDb;Port=5432;Database=HubDb;Username=postgres;Password=Password"
+    "PostgresConnection": "Host=postgreSql;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub"
   },
   "AllowedHosts": "*"
 }
