--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     ports:
       - 8080:8080
       - 8081:8081
+    depends_on:
+      - postgreSql
 
   postgreSql:
     image: postgres:16
