--- a/KartowkaMarkowkaHub.Web/appsettings.Development.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.Development.json
@@ -7,6 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=HubDb.db",
-    "PostgresConnection": "Host=postgreSql;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub"
   }
 }
