перемещает строку подключения к redis в appsettings

--- a/KartowkaMarkowkaHub.Web/appsettings.Development.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.Development.json
@@ -7,6 +7,7 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=HubDb.db",
-    "PostgresConnection": "Host=localhost;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub"
+    "PostgresConnection": "Host=localhost;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub",
+    "RedisConnection": "localhost"
   }
 }
