--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -7,7 +7,8 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=HubDb.db",
-    "PostgresConnection": "Host=postgreSql;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub"
+    "PostgresConnection": "Host=postgreSql;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub",
+    "RedisConnection": "cacheRedis"
   },
   "AllowedHosts": "*"
 }
