подключает rabbitmq к проекту и создает команду для получения продукта

--- a/KartowkaMarkowkaHub.Basket/appsettings.Development.json
+++ b/KartowkaMarkowkaHub.Basket/appsettings.Development.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "RedisConnection": "localhost"
+  "RedisConnection": "localhost",
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
