--- a/KartowkaMarkowkaHub.Basket/appsettings.json
+++ b/KartowkaMarkowkaHub.Basket/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "AllowedHosts": "*",
-  "RedisConnection": "cacheRedis"
+  "RedisConnection": "cacheRedis",
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
