настраивает masstransit и передачу id продукта из проекта корзины в основной проект

--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -10,5 +10,10 @@
     "PostgresConnection": "Host=postgreSql;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub",
     "RedisConnection": "cacheRedis"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
+  }
 }
