--- a/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
+++ b/KartowkaMarkowkaHub.Services/KartowkaMarkowkaHub.Services.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="FluentValidation" Version="11.10.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.10.0" />
+    <PackageReference Include="MassTransit" Version="8.3.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.7">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
