--- a/KartowkaMarkowkaHub.Web/appsettings.Development.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.Development.json
@@ -9,5 +9,10 @@
     "DefaultConnection": "Data Source=HubDb.db",
     "PostgresConnection": "Host=localhost;Port=5432;Database=HubDb;Username=adminHub;Password=passwordHub",
     "RedisConnection": "localhost"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    "Username": "guest",
+    "Password": "guest"
   }
 }
