--- a/KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj
+++ b/KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="MassTransit" Version="8.3.2" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
