--- a/KartowkaMarkowkaHub.Basket/Dockerfile
+++ b/KartowkaMarkowkaHub.Basket/Dockerfile
@@ -10,10 +10,10 @@ FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj", "KartowkaMarkowkaHub.Basket/"]
-RUN dotnet restore "./KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj"
+RUN dotnet restore "KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj"
 COPY . .
 WORKDIR "/src/KartowkaMarkowkaHub.Basket"
-RUN dotnet build "./KartowkaMarkowkaHub.Basket.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "KartowkaMarkowkaHub.Basket.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
