--- a/KartowkaMarkowkaHub.Basket/appsettings.json
+++ b/KartowkaMarkowkaHub.Basket/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "RedisConnection": "cacheRedis",
   "RabbitMq": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest"
   }
