настраивает cors в проекте web и настраивает взаимодействие фронта и бэка в докере

--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -12,7 +12,7 @@
   },
   "AllowedHosts": "*",
   "RabbitMq": {
-    "Host": "localhost",
+    "Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest"
   }
