add-logging: добавляет serialog через appsetting

--- a/KartowkaMarkowkaHub.Web/appsettings.Development.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.Development.json
@@ -14,5 +14,20 @@
     "Host": "localhost",
     "Username": "guest",
     "Password": "guest"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Graylog" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "localhost",
+          "Port": 12201,
+          "Facility": "kartowkamarkowka",
+          "TransportType": "Udp"
+        }
+      }
+    ]
   }
 }
