--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -107,6 +107,8 @@ services:
     volumes:
       - mongo_data:/data/db
     restart: unless-stopped
+    networks:
+     - app-network
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.13
@@ -122,6 +124,8 @@ services:
         hard: -1
     mem_limit: 1g
     restart: unless-stopped
+    networks:
+     - app-network
 
   graylog: #логин-пароль admin admin123
     image: graylog/graylog:6.1
@@ -141,12 +145,13 @@ services:
       - "9000:9000"        # Graylog Web UI
       - "12201:12201/udp"  # GELF UDP Input
     restart: unless-stopped
+    networks:
+     - app-network
 
 volumes:
   mongo_data:
   es_data:
   graylog_data:
-  #        - "8086:80"
 
 networks:
   app-network:
