add-logging: исправляет работу graylog через docker-compose

--- a/KartowkaMarkowkaHub.Web/appsettings.json
+++ b/KartowkaMarkowkaHub.Web/appsettings.json
@@ -15,5 +15,20 @@
     "Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest"
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Graylog" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "Graylog",
+        "Args": {
+          "HostnameOrAddress": "graylog",
+          "Port": 12201,
+          "Facility": "kartowkamarkowka",
+          "TransportType": "Udp"
+        }
+      }
+    ]
   }
 }
