--- a/KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj
+++ b/KartowkaMarkowkaHub.Basket/KartowkaMarkowkaHub.Basket.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageReference Include="MassTransit" Version="8.3.2" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.3.2" />
