--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -19,5 +19,5 @@ jobs:
       - name: build
         run: dotnet build './KartowkaMarkowkaHub.Web/KartowkaMarkowkaHub.Web.csproj'
       - name: test
-        run: dotnet test './KartowkaMarkowkaHub.Test/KartowkaMarkowkaHub.Test.csproj' --no-build
+        run: dotnet test --no-build
       - run: echo "🐱‍👤This job's status is ${{ job.status }}."  
