настраивает установку url для cors через docker-compose и добавляет файл миграции

--- a/KartowkaMarkowkaHub.Basket/Dockerfile
+++ b/KartowkaMarkowkaHub.Basket/Dockerfile
@@ -5,6 +5,9 @@ USER app
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
+#url для настройки cors
+ARG CORS_ALLOWED_ORIGINS
+ENV CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS}
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
